k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pantheon
  labels:
    name: pantheon
    environment: production
    app: pantheon-base
